--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,6 +1,5 @@
 :root {
   --mobile-doc-height: 100vh;
-  --scrollbar-width: 0px;
   --white: #f3f3f3;
   --black: #0a0a0a;
   --font-tech: Rajdhani, sans-serif;
